src/objects/Pre_Bid_Approval__c.object
<CustomObject>
    <description>Pre-Bids to Tender Management</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Approval from Manager</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reject to Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Time__c</fullName>
        <label>Approval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BPO</fullName>
                </value>
                <value>
                    <fullName>Business Reporting</fullName>
                </value>
                <value>
                    <fullName>CR Business</fullName>
                </value>
                <value>
                    <fullName>CR Horeca</fullName>
                </value>
                <value>
                    <fullName>CR Institutions</fullName>
                </value>
                <value>
                    <fullName>Financial Approvals</fullName>
                </value>
                <value>
                    <fullName>Indexation</fullName>
                </value>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Operations (Technical Service)</fullName>
                </value>
                <value>
                    <fullName>Product Marketing</fullName>
                </value>
                <value>
                    <fullName>Technical Helpdesk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <description>Document</description>
        <inlineHelpText>Document</inlineHelpText>
        <label>Document</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exclude_Weekends__c</fullName>
        <description>This formula finds the day of the week of the date field value. If the date is a Wednesday, Thursday, or Friday, the formula adds five calendar days (two weekend days, three weekdays) to the date to account for the weekend. If date is a Saturday, you need four additional calendar days. For any other day of the week (Sunday — Tuesday), simply add three days. You can easily modify this formula to add more or less business days. The tip for getting the day of the week might be useful if you need to adjust this formula.</description>
        <formula>CASE( 
  MOD( Sent_for_Approval_Date__c - DATE( 1900, 1, 7 ), 7 ),
  3, Sent_for_Approval_Date__c + 2 + 3,
  4, Sent_for_Approval_Date__c + 2 + 3,
  5, Sent_for_Approval_Date__c + 2 + 3,
  6, Sent_for_Approval_Date__c + 1 + 3,
  Sent_for_Approval_Date__c + 3
)</formula>
        <label>Exclude Weekends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pre-Bid Approvals</relationshipLabel>
        <relationshipName>Pre_Bid_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <description>Page Tender Managements</description>
        <label>Page</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Paragraph__c</fullName>
        <label>Paragraph</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sent_for_Approval_Date__c</fullName>
        <label>Sent for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Tender Managerment</description>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Bid_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pre-Bid Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pre-Bid Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Bid Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>